[SCROLL] Trying to fix scroll on mobile
It is impossible to scroll up from the last section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,10 @@ body {
             scroll-snap-align: start none;
         }
 
+        div.section:last-child {
+            scroll-snap-align: end none;
+        }
+
         div.section#title {
             text-align: center;
             color: azure;
